--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,13 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
+  username: rails
+  password: 123
   socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: MyRailsBlog_development
+  database: rails_labs
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
